<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, JSONParseactivity!</string>
    <string name="app_name">Finance Alert</string>
    <string name="Alerts_Page">Alerts</string>
    <string name="Add_Page">Add Stock</string>
    <string name="Edit_Page">Edit Stock</string>
    <string name="Chart_Page">View Chart</string>   
    
    <string name="QuoteUrl">https://api.tradeking.com/v1/market/ext/quotes.json?symbols=</string>
    
    <string name="InvalidWebSites">http://stockcharts.com,http://stks.co,http://www.thestreet.com,http://www.stockpickr.com</string>
    
    <string name="AddTickerBtn">Add</string>
    <string name="EditTickerBtn">Edit</string>
    <string name="CancelTickerBtn">Cancel</string>

    <string name="Ticker">Ticker</string>
    <string name="Quantity">Quantity</string>
    <string name="BreakOut">BreakOut</string>
    <string name="BuyPrice">Price</string>
    
    <string name="AddTicker">Add Ticker</string>
    <string name="CopyQuote">Copy Quote(s)</string>
    <string name="QuoteStock">New Quote</string>
    <string name="RefreshAlerts">Refresh</string>
    <string name="Preferences">Preferences</string>
    <string name="ExportAlerts">Export Alerts</string>
    <string name="RemoveAll">Clear Alerts</string>
    <string name="ImportAlerts">Import Alerts</string>
    
    <string name="StockKey">stock</string>
    <string name="QuoteKey">quote</string>
    
    <string name="Delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="Chart">Chart</string>
    
    <string name="Alerted">Alerted</string>
    
    <string name="UnknownExchange">unknown</string>
    
    <item format="integer" type="integer" name="servicePause">300</item>
    <item format="integer" type="integer" name="dailyStart">9</item>
    <item format="integer" type="integer" name="dailyStop">16</item>    
        
   
    <item format="string" type="bool" name="verbose">false</item>
    <string name="queryBtn">Go!</string>
    
    <string name="broker_prompt">Select the  broker</string>
    <string-array name="broker_array">
        <item>TradeKing</item>
        <item>OptionsHouse</item>
        <item>OptionsXpress - K</item>
        <item>OptionsXpress - T</item>
        <item>Zecco</item>
        <item>Scottrade</item>
    </string-array>
        
</resources>
