<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

   <item
        android:id="@+id/quote_stock"
        android:title="@string/QuoteStock"
        android:icon="@android:drawable/ic_menu_search"
        />
   <item
        android:id="@+id/add_ticker"
        android:title="@string/AddTicker"
        android:icon="@drawable/add"
        />
	<item
        android:id="@+id/refresh_quotes"
        android:title="@string/RefreshAlerts"
        android:icon="@drawable/refresh"
        />
	 <item
        android:id="@+id/preferences"
        android:title="Preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        />   
	<item
        android:id="@+id/delete_quote"
        android:title="@string/Delete"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        />        

	 <item
        android:id="@+id/clearquotes"
        android:title="Clear History"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        />
	 <item
        android:id="@+id/copyquote"
        android:title="@string/CopyQuote"
        android:icon="@android:drawable/ic_menu_share"
        /> 	 	  	 
</menu>