<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:paddingTop="9.0dip"
            android:text="@string/Ticker"
            android:textColor="@color/blue" />

        <EditText
            android:id="@+id/activeTicker"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:inputType="textCapCharacters"
            android:singleLine="true" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:paddingTop="9.0dip"
            android:text="@string/Quantity"
            android:textColor="@color/blue" />

        <EditText
            android:id="@+id/activeQuantity"
            android:layout_width="110dp"
            android:layout_height="60dp"            
            android:inputType="number"
            android:singleLine="true" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:paddingTop="9.0dip"
            android:text="@string/BuyPrice"
            android:textColor="@color/blue" />

        <EditText
            android:id="@+id/activePrice"
            android:layout_width="110dp"
            android:layout_height="60dp"            
            android:inputType="numberDecimal"
            android:singleLine="true" />

    </LinearLayout>     
    
  

    <Spinner
        android:id="@+id/spinnerBroker"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:entries="@array/broker_array"
        android:prompt="@string/broker_prompt" />
    
    <DatePicker
        android:id="@+id/activeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />    

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/add_stock_directly_button"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:paddingTop="6.0dip"
            android:text="@string/AddTickerBtn" />

        <Button
            android:id="@+id/cancel_stock_directly_button"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:paddingTop="6.0dip"
            android:text="@string/CancelTickerBtn" />
    </LinearLayout>

</LinearLayout>